fixed images css

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -148,7 +148,7 @@ p
 }
 body {
     font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
-    background-image: url(file:///C:/users/treyw/documents/UCF/HomeworkUcf/HW-wireframe/Images/circles-light.png);
+    background-image: url(Images/circles-light.png);
     font-color: #777777;
 }
 h1, h2, h3, h4, h5, h6 {
