--- a/CSS/style.css
+++ b/CSS/style.css
@@ -148,8 +148,8 @@ p
 }
 body {
     font-family: 'Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
-    background-image: url(Images/circles-light.png);
-    font-color: #777777;
+    background-image: url("../Images/circlesLight.png");
+    color: #777777;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Georgia', 'Times', 'Times New Roman', 'serif';    
